--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "web3modal": "^1.9.4"
   },
   "devDependencies": {
     "@types/react": "17.0.15",
